<resources>
    <string name="app_name">Ventas</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>

    <!-- login_activity  -->
    <string name="loginActivityCorreo">Correo</string>
    <string name="loginActivityPassword">Password</string>
    <string name="loginactivityIngresar">Ingresar</string>

    <!-- activity main -->
    <string name="title_home">Torres</string>
    <string name="title_cliente">Clientes</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="menuActivityReqerimiento">Requerimientos</string>
    <string name="menuActivityVentas">Ventas</string>
    <string name="menuActivityComprobante">Comprobante</string>
    <string name="title_activity_ventas">VentasActivity</string>


    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="productosActivityProducto1">Producto 1</string>
    <string name="productosActivityProducto2">Producto 2</string>
    <string name="productosActivityProducto3">Producto 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_producto">Productos</string>
    <string name="productos_menu_continuar">Continuar</string>
    <string name="productos_menu_camara">Camara</string>
    <string name="title_boleta">Boleta</string>
    <!-- String for menuActivity -->


    <string name="searchHintText_searchToolbar">Buscar</string>
    <string name="mensaje_compra">¿Continuar con la compra?</string>
    <string name="mensaje_ok">ok</string>
    <string name="mensaje_cancelar">cancelar</string>

    <!-- REQUERIMIENTO-->
    <string name="title_requerimiento">Requerimientos</string>
    <string name="title_ruta">Lista de Rutas</string>
    <string name="title_detalle">Detalle</string>
    <string name="title_ProductoReq">Productos</string>
    <!-- datepicker-->
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>


    <!-- COMPROBANTE -->
    <string name="title_comprobante">Comprobantes</string>


    <string name="ic_Día">Día</string>
    <string name="ic_Semana">Semana</string>
    <string name="ic_Mes">Mes</string>
    <string name="title_orden">Orden</string>
    <string name="title_detalle_guia">Nota de Venta</string>
    <string name="orden_eliminar">eliminar</string>


    <!-- spinner-->
    <string-array name="spinner_list_item_array">
        <item>Hoy</item>
        <item>Última Semana</item>
        <item>Último Mes</item>

    </string-array>
</resources>
