<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    >

    <item android:id="@+id/ic_tipo"
        android:title="Filtrar tipo"
        app:showAsAction="always"
        android:icon="@drawable/ic_assignment"
        >
        <menu>
            <item
                android:id="@+id/ic_tipo1"
                android:title="Ruta"
                app:showAsAction="collapseActionView"
                />
            <item
                android:id="@+id/ic_tipo2"
                android:title="Otro"
                android:orderInCategory="100"
                app:showAsAction="collapseActionView" />


        </menu>
    </item>

    <item android:id="@+id/ic_search"
        android:title="Filtrar fecha"
        app:showAsAction="always"
        android:icon="@drawable/ic_date_range"
        >
        <menu>
        <item
            android:id="@+id/ic_Dia"
            android:title="@string/ic_Día"
            app:showAsAction="collapseActionView"
            />
        <item
            android:id="@+id/ic_Fecha"
            android:title="@string/ic_Semana"
            android:orderInCategory="100"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/ic_Mes"
            app:showAsAction="collapseActionView" />

        </menu>
    </item>

</menu>
