<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<item
        android:id="@+id/ic_tipo"
        android:icon="@drawable/ic_assignment"
        android:title="Filtrar tipo"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/ic_tipo1"
                android:title="Ruta"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/ic_tipo2"
                android:orderInCategory="100"
                android:title="Otro"
                app:showAsAction="collapseActionView" />
        </menu>
    </item> -->

    <item
        android:id="@+id/ic_search"
        android:icon="@drawable/ic_date_range"
        android:title="Filtrar fecha"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/ic_Dia"
                android:icon="@drawable/ic_date_range"
                android:title="@string/ic_Día"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/ic_Fecha"
                android:orderInCategory="100"
                android:title="@string/ic_Semana"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/ic_Mes"
                app:showAsAction="collapseActionView" />

        </menu>
    </item>

</menu>
