<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:popupTheme="@style/ThemeOverlay.MyTheme">

    <item
        android:id="@+id/ic_tipo"
        android:icon="@drawable/ic_assignment"
        android:title="Filtrar tipo"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/ic_Guia"
                android:title="Gui"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/ic_Factura"
                android:orderInCategory="100"
                android:title="Factura"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/ic_Boleta"
                android:orderInCategory="100"
                android:title="Boleta"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/ic_Nota_Ventas"
                android:orderInCategory="100"
                android:title="Nota de ventas"
                app:showAsAction="collapseActionView" />
        </menu>
    </item>

    <item
        android:id="@+id/ic_search"
        android:icon="@drawable/ic_date_range"
        android:title="Filtrar fecha"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/ic_Dia"
                android:title="@string/ic_Día"
                android:icon="@drawable/ic_icon_today_black"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/ic_Semana"
                android:orderInCategory="100"
                android:title="@string/ic_Semana"
                android:icon="@drawable/ic_icon_semana_black"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/ic_Mes"
                android:orderInCategory="100"
                android:title="@string/ic_Mes"
                android:icon="@drawable/ic_icon_mes_black"
                app:showAsAction="collapseActionView" />

        </menu>
    </item>


    <!-- app:actionViewClass="android.widget.SearchView"-->
</menu>
